--- a/admin-team.html
+++ b/admin-team.html
@@ -31,10 +31,18 @@
     </div>
 
     <div class="links">
-      <a href="index.html" class="link active">Home</a>
-      <a href="https://discord.gg/minemc" class="link">Discord</a>
-      <a href="admin-team.html" class="link">Staff-Team</a>
-      <a href="#" class="link">Store</a>
+      <button> 
+        <a href="index.html">Home</a>
+    </button>
+    <button1> 
+        <a href="https://discord.gg/minemc">Discord</a>
+    </button1>
+    <button2> 
+        <a href="admin-team.html">Staff-Team</a>
+    </button2>
+    <button3> 
+        <a href="https://store-minemc.craftingstore.net">Store</a>
+    </button3>
     </div>
   </div>
 
